test: use store in page1 tests

--- a/src/app/components/page1/page1.component.html
+++ b/src/app/components/page1/page1.component.html
@@ -4,11 +4,11 @@
 
 <main>
   <section>
-    Counts: {{state$$.count}}
+    <p>Counts: {{state$$.count}}</p>
 
-    Clicks: {{state$$.clicks}}
+    <p>Clicks: {{state$$.clicks}}</p>
 
-    One time value: {{oneTimeValue}}
+    <p>One time value: {{oneTimeValue}}</p>
   </section>
 
   <section>
