--- a/src/app/components/page1/page1.component.html
+++ b/src/app/components/page1/page1.component.html
@@ -1,19 +1,9 @@
 <header>
-  Page 1
+  A component
 </header>
 
 <main>
-  <section>
-    <p>Clicks: {{state$$.clicks}}</p>
+  <app-card></app-card>
 
-    <p>Count: {{state$$.count}}</p>
-
-    <p>One time value: {{oneTimeValue}}</p>
-  </section>
-
-  <section>
-    <button (click)="inc()">Click</button>
-    <button (click)="show()">Service</button>
-    <button (click)="reset()">Reset</button>
-  </section>
+  <app-action></app-action>
 </main>
